dom/canvas/TexUnpackBlob.h
@@ -45,7 +45,7 @@ Maybe<std::string> BlitPreventReason(int32_t level, const ivec3& offset,
                                      GLenum internalFormat,
                                      const webgl::PackingInfo&,
                                      const TexUnpackBlobDesc&,
-                                     bool isRgb8Renderable);
+                                     OptionalRenderableFormatBits);
 
 class TexUnpackBlob {
  public:
